[gd_scene load_steps=4 format=3 uid="uid://wqgf1u5oi3ph"]

[ext_resource type="Script" path="res://wiper.gd" id="1_2fgr6"]
[ext_resource type="AudioStream" uid="uid://bnubc2tle3mmg" path="res://art/hum_sound.mp3" id="2_u73st"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xje5m"]
size = Vector2(1920, 40)

[node name="Wiper" type="Area2D" groups=["wipers"]]
script = ExtResource("1_2fgr6")

[node name="ColorRect" type="ColorRect" parent="."]
offset_top = -40.0
offset_right = 1920.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(960, -20)
shape = SubResource("RectangleShape2D_xje5m")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(960, -20)
scale = Vector2(96, 2)

[node name="HumSound" type="AudioStreamPlayer" parent="." groups=["wipers"]]
stream = ExtResource("2_u73st")
volume_db = -10.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
